[tool.poetry]
name = "cavid"
version = "0.1.0"
description = ""
authors = ["Simon Junod <sj@simonjunod.ch>"]

[tool.poetry.dependencies]
python = "^3.8"
pyperclip = "^1.8.1"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
